--- a/gauge-2.html
+++ b/gauge-2.html
@@ -93,7 +93,7 @@ function processData(values) {
     // Process each row of data
     values.forEach(function(row) {
         // Ensure all values are numerical; if not, set them to 0
-        var gaugeValue = parseFloat(row[1]); // Column B (index 1)
+        var gaugeValue = parseFloat(row[1]); // Corrected index to 1 for gauge_value column
         var deltaValue = parseFloat(row[2]); // Column C (index 2)
         var currentValue = parseFloat(row[3]); // Column D (index 3)
 
