--- a/gauge-2.html
+++ b/gauge-2.html
@@ -107,13 +107,10 @@ function processData(values) {
         }
     });
 
-    // Calculate the maximum value of gaugeValue
-    var maxGaugeValue = Math.max(...gaugeValues);
-
     // Create data for Plotly charts
-    var data1 = createChartData(gaugeValues[0], deltaValues[0], currentValues[0], "Hours Per Day<br><span style='font-size:0.8em;color:gray'>Higher is Better</span>", maxGaugeValue);
-    var data2 = createChartData(gaugeValues[1], deltaValues[1], currentValues[1], "% to Goal<br><span style='font-size:0.8em;color:gray'>Higher is Better</span>", maxGaugeValue);
-    var data3 = createChartData(gaugeValues[2], deltaValues[2], currentValues[2], "SVC Policy Dollars<br><span style='font-size:0.8em;color:gray'>Lower is Better</span>", maxGaugeValue);
+    var data1 = createChartData(gaugeValues[0], deltaValues[0], currentValues[0], "Hours Per Day<br><span style='font-size:0.8em;color:gray'>Higher is Better</span>");
+    var data2 = createChartData(gaugeValues[1], deltaValues[1], currentValues[1], "% to Goal<br><span style='font-size:0.8em;color:gray'>Higher is Better</span>");
+    var data3 = createChartData(gaugeValues[2], deltaValues[2], currentValues[2], "SVC Policy Dollars<br><span style='font-size:0.8em;color:gray'>Lower is Better</span>");
 
     // Render the Plotly charts
     Plotly.newPlot('myDiv1', data1);
@@ -121,7 +118,7 @@ function processData(values) {
     Plotly.newPlot('myDiv3', data3);
 }
 
-function createChartData(gaugeValue, deltaValue, currentValue, titleText, maxGaugeValue) {
+function createChartData(gaugeValue, deltaValue, currentValue, titleText) {
     return [{
         domain: { x: [0, 1], y: [0, 1] },
         value: currentValue,
@@ -130,11 +127,11 @@ function createChartData(gaugeValue, deltaValue, currentValue, titleText, maxGau
         mode: "gauge+number+delta",
         delta: { reference: deltaValue },
         gauge: {
-            axis: { range: [null, maxGaugeValue], tickwidth: 2, tickcolor: "darkblue" },
+            axis: { range: [null, gaugeValue], tickwidth: 2, tickcolor: "darkblue" },
             bar: { color: "darkblue" },
             steps: [
                 { range: [0, deltaValue], color: "lightcoral" },
-                { range: [deltaValue, maxGaugeValue], color: "lightgreen" }
+                { range: [deltaValue, gaugeValue], color: "lightgreen" }
             ],
             // Add a threshold line
             threshold: {
