dark blue threshold

--- a/gauge-2.html
+++ b/gauge-2.html
@@ -134,7 +134,7 @@ function createChartData(gaugeValue, deltaValue, currentValue) {
                 { range: [deltaValue, gaugeValue], color: "lightgreen" }
             ],
             threshold: {
-                line: { color: "red", width: 2 },
+                line: { color: "darkblue", width: 2 },
                 value: deltaValue
             }
         }
