--- a/performance-2.html
+++ b/performance-2.html
@@ -21,7 +21,7 @@
 
             function initClient() {
                 gapi.client.init({
-                    apiKey: 'YOUR_API_KEY',
+                    apiKey: 'AIzaSyCFvX56uc0WNPz2ZTJhpg7Q2pFOgZxt7-0',
                     discoveryDocs: ["https://sheets.googleapis.com/$discovery/rest?version=v4"],
                 }).then(function () {
                     // Fetch data from Google Sheets API
@@ -31,7 +31,7 @@
 
             function fetchSheetData() {
                 gapi.client.sheets.spreadsheets.values.get({
-                    spreadsheetId: 'YOUR_SPREADSHEET_ID',
+                    spreadsheetId: '1Em_4WKvdHbWu5WR2HCkd4JRVFaTsjJsqPHqDPRj8Gxs',
                     range: 'hours' // Fetch the named range 'hours'
                 }).then(function (response) {
                     var range = response.result;
