--- a/performance-2.html
+++ b/performance-2.html
@@ -57,6 +57,7 @@
             padding-left: 5px;
         }
     </style>
+    <script src="https://apis.google.com/js/api.js"></script>
     <script src="config.json"></script>
     <script>
         window.onload = function() {
