--- a/performance-2.html
+++ b/performance-2.html
@@ -97,9 +97,9 @@
                     }).then(function() {
                         gapi.client.sheets.spreadsheets.values.get({
                             spreadsheetId: spreadsheetId,
-                            range: 'Sheet1' // Adjust the range based on your sheet
+                            range: 'hours' // Named range in the Google Sheet
                         }).then(function(response) {
-                            const values = response.result.values;
+                            const values = response.result.values.slice(1); // Exclude the first row (column headings)
                             parseGoogleSheetData(values);
                         }, function(error) {
                             console.error('Error loading Google Sheet data:', error);
@@ -112,28 +112,8 @@
             function parseGoogleSheetData(values) {
                 table.innerHTML = ''; // Clear existing table content
                 
-                // Add column headers
-                const headerRow = document.createElement('tr');
-                const columnHeader1 = document.createElement('th');
-                columnHeader1.textContent = 'Name';
-                columnHeader1.classList.add('column-header');
-                headerRow.appendChild(columnHeader1);
-
-                const columnHeader2 = document.createElement('th');
-                columnHeader2.textContent = 'Weekly Hours';
-                columnHeader2.classList.add('column-header');
-                headerRow.appendChild(columnHeader2);
-
-                const columnHeader3 = document.createElement('th');
-                columnHeader3.textContent = 'YTD Performance';
-                columnHeader3.classList.add('column-header');
-                headerRow.appendChild(columnHeader3);
-
-                table.appendChild(headerRow);
-
                 // Parse data rows
-                for (let i = 1; i < values.length; i++) {
-                    const rowData = values[i];
+                values.forEach(rowData => {
                     if (rowData[0]) { // Check if data exists
                         const row = document.createElement('tr');
                         rowCount++;
@@ -178,7 +158,7 @@
                         
                         table.appendChild(row);
                     }
-                }
+                });
 
                 // Calculate the average of YTD Performance
                 const averagePercentage = totalPercentage / rowCount;
@@ -205,37 +185,37 @@
             function setColorSegments(bar, value) {
                 if (value >= 0 && value < 19) {
                     const segment1 = document.createElement('div');
-                    segment1.className = 'segment segment1';
+                    segment1.className = 'bar-segment segment1';
                     bar.appendChild(segment1);
                 } else if (value >= 20 && value < 27) {
                     const segment1 = document.createElement('div');
-                    segment1.className = 'segment segment1';
+                    segment1.className = 'bar-segment segment1';
                     bar.appendChild(segment1);
                     const segment2 = document.createElement('div');
-                    segment2.className = 'segment segment2';
+                    segment2.className = 'bar-segment segment2';
                     bar.appendChild(segment2);
                 } else if (value >= 27 && value < 32) {
                     const segment1 = document.createElement('div');
-                    segment1.className = 'segment segment1';
+                    segment1.className = 'bar-segment segment1';
                     bar.appendChild(segment1);
                     const segment2 = document.createElement('div');
-                    segment2.className = 'segment segment2';
+                    segment2.className = 'bar-segment segment2';
                     bar.appendChild(segment2);
                     const segment3 = document.createElement('div');
-                    segment3.className = 'segment segment3';
+                    segment3.className = 'bar-segment segment3';
                     bar.appendChild(segment3);
                 } else if (value >= 33 && value <= 150) {
                     const segment1 = document.createElement('div');
-                    segment1.className = 'segment segment1';
+                    segment1.className = 'bar-segment segment1';
                     bar.appendChild(segment1);
                     const segment2 = document.createElement('div');
-                    segment2.className = 'segment segment2';
+                    segment2.className = 'bar-segment segment2';
                     bar.appendChild(segment2);
                     const segment3 = document.createElement('div');
-                    segment3.className = 'segment segment3';
+                    segment3.className = 'bar-segment segment3';
                     bar.appendChild(segment3);
                     const segment4 = document.createElement('div');
-                    segment4.className = 'segment segment4';
+                    segment4.className = 'bar-segment segment4';
                     bar.appendChild(segment4);
                 }
             }
@@ -253,7 +233,7 @@
         <p>YTD Performance is the percentage of Billed Time to On-Premise time</p>
         <p>Average Shop Performance:</p>
         <div id="averageGaugeContainer">                
-            <div id="averageGauge" class="bar new-gauge">
+            <div id="averageGauge" class="new-gauge">
                 <div id="averagePercentageDisplay" class="percentage"></div>
             </div>       
         </div>
